put image to background

--- a/package.json
+++ b/package.json
@@ -1,16 +1,22 @@
 {
-  "name": "urlshorten",
+  "homepage": "http://szepnapot.github.io/birthday",
+  "name": "birthday",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "moment": "^2.24.0",
     "react": "^16.12.0",
+    "react-confetti": "^5.0.1",
     "react-dom": "^16.12.0",
+    "react-moment": "^0.9.7",
     "react-scripts": "3.3.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -30,5 +36,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.2.0",
+    "react-use": "^13.22.4"
   }
 }
